# sysrsync

./: .all-contributorsrc  .gitignore  .sonarcloud.properties  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: release-drafter.yml
end-to-end-tests/: Dockerfile.ssh-server  Dockerfile.sysrsync-client  run-tests.sh  tests.py
end-to-end-tests/keys/: test-key  test-key.pub
sysrsync/: __init__.py  command_maker.py  exceptions.py  runner.py  test.py
sysrsync/helpers/: __init__.py  directories.py  files.py  iterators.py  rsync.py
test/: __init__.py  test_directories_helper.py  test_iterators_helper.py  test_sysrsync.py
tests/: directories_helper.py  iterators_helper.py  package.py  sysrsync.py
